@@ -6,14 +6,6 @@ java {
     modularity.inferModulePath.set(true)
 }
 
-tasks.withType<Test> {
-    jvmArgs = listOf("--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED")
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs = listOf("--add-modules", "jdk.incubator.vector")
-}
-
 dependencies {
     implementation(project(":core"))
     implementation(project(":domain"))
@@ -22,6 +14,7 @@ dependencies {
     implementation(llm.bundles.langchain4j)
     runtimeOnly(mn.snakeyaml)
 
+    testImplementation(libs.csv)
     testRuntimeOnly(mn.logback.classic)
     testImplementation(libs.bundles.junit)
 }
